$Id: ChangeLog,v 1.98 2004/08/05 12:13:54 freckle Exp $

2004-08-05  Oliver Schulz  <olischulz@web.de>

	* crt/filelength.c: For VIRTUALDEVICEs the return value of the ioctl 
	function was returned, which is obviosly wrong. Now the correct 
	filelength value is returned to the caller.

2004-08-05  Matthias Ringwald <mringwal@inf.ethz.ch>
    * dev/irqreg.h, os/thread.c, os/arch/unix_nutinit.c,
    os/arch/unix_thread.c: added unix emulation hook in NutThreadYield
    to safely process NutPostEventAsync calls occuring in non Nut/OS
    threads.
    
    * dev/unix_devs.c, include/dev/unix_devs.c: rewrote the unix read
    function again using the new unix NutThreadYield hook to call
    the NutPostEventAsync function safely (fast & correct).
    _write(nf, 0, 0) aka fflush is ignored on unix emulation.

    * dev/unix_devs.c: CTRL-C on terminal terminates running
    unix emulation apps nows.

    * os/nutinit.c, os/arch/unix_eeprom.c, include/arch/unix.h:
    added an avr-libc compatible (but yet uncomplete) eeprom simulation
    that uses file 'eeprom.bin' in the current directory to store eeprom
    content.
    
2004-08-03  Harald Kipp  <harald.kipp@egnite.de>

	* app/basemon: Dataflash check added. Fixed a bug, which offered MAC
	address 0. This is really weird: The MAC address bug had been fixed
	by making an auto array global. There's probably something wrong
	with the stack. UART initialization is now early for easier debugging.
	In previous releases the web server didn't produce any output when
	Basemon didn't detect RS232 input. This confused users, didn't show
	the IP settings and thus had been changed. All calls to NutDelay had
	been replaced by calls of the local Delay routine. The SMSC shares
	transmit and receive buffer, which let the broadcast test fail after
	some incoming packets, which where never removed from the NIC. Now
	the receiver is disabled during broadcast test and the NIC will be